# hobot_yolo_world

./: CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/: homography.json  offline_vocabulary_embeddings.json
include/: image_utils.h  yolo_world_node.h
include/post_process/: yolo_world_output_parser.h
launch/: yolo_world.launch.py  yolo_world_advance.launch.py  yolo_world_debug.launch.py
src/: image_utils.cpp  main.cpp  yolo_world_node.cpp
src/post_process/: yolo_world_output_parser.cpp
tool/: README.md  README_cn.md  main.py  offline_vocabulary_embeddings.json  requirements.txt
tool/clip/: clip.py
